New function calculate_anomalies added
