# api_contract/openapi.json
@@ -217,25 +217,6 @@
   },
   "openapi": "3.1.0",
   "paths": {
-    "/api/v1/anomaly/analyze": {
-      "get": {
-        "operationId": "analyze_all_embeddings_api_v1_anomaly_analyze_get",
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {}
-              }
-            },
-            "description": "Successful Response"
-          }
-        },
-        "summary": "Analyze All Embeddings",
-        "tags": [
-          "anomaly"
-        ]
-      }
-    },
     "/api/v1/anomaly/{embedding_index}": {
       "get": {
         "operationId": "get_anomaly_score_api_v1_anomaly__embedding_index__get",
